  include/.  (Daniel Stenberg)

  Automake and libtool are being used (increased portability). (Daniel
  Stenberg)

  Fixed OpenSSL detection using pkg-config. (Daniel Stenberg)

  Simple self test added to tests/. (Simon Josefsson)

  Libgcrypt can now be used instead of OpenSSL if you specify
  --with-libgcrypt.  (Simon Josefsson)

  Fixed a memory leak in the packet handling. (Dan Fandrich)

  Made libssh2 build with OpenSSL 0.9.6. (Dan Fandrich)

  Improved portability to Solaris related to -lsocket and
  -lnsl. (Simon Josefsson)

  Clean up of README, INSTALL, NEWS, added ChangeLog. (Simon
  Josefsson)

  Improve debugging code.  Avoids many #ifdef's.

  Improved session closing to avoid potentially truncated files on
  OpenSSH servers (Dan Fandrich)

Version 0.14
------------

  Plug leaks in EVP cipher init/shutdown. (Selcuk Gueney)

  Allow socket_fd == 0 in libssh2_session_startup(). (puudeli)

  Swap ordering of packet_add/packet-inspection to avoid inspect after free. (Selcuk)

  Swap KEX_INIT ordering, send our KEX_INIT first.

  Add check for oportunistic KEX_INIT packets.  Burn bad guess if necessary.

  Fix OpenSSL detection using pkg-config. (Dan Casey)

Version 0.13
------------

  Fixed channel not being marked closed when CHANNEL_CLOSE package cannot be sent. (David Robins)

  Fixed payload packet allocation bug when invalid packet length received. (David Robins)

  Fixed `make install' target for MacOSX.

  Add terminating NULL character to readlink()/realpath() results.

  BugFix#1436593: Apply build options for HPUX targets.

Version 0.12
------------

  Added support for publickey subsytem (not the same as publickey auth).

  Fix x11_req.  Multiple packet_len issues and error handling logic.
    (Thanks Simon Hart)

  Fix generation of 'e' portion of Diffie-Hellman keyset.
	Use appropriate order for BN_rand() rather than fixed group1-specific value.

  Re-fixed libssh2_sftp_rename_ex()